samples/_failures_safe/1761561729_416339_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfe76ff1.c: In function ‘main’:
./samples/SAFE/__tmp_bfe76ff1.c:155:9: error: expected declaration or statement at end of input
  155 |         print_current_state(sm);
      |         ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bfe76ff1.c:155:9: error: expected declaration or statement at end of input
